--- a/src/index.css
+++ b/src/index.css
@@ -220,9 +220,12 @@ button:focus-visible {
 }
 
 .header {
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.10), 0px 0px 68px 0px rgba(0, 0, 0, 0.05);
   left: 50%;
   transform: translateX(-50%);
+}
+
+.header-shadow {
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.10), 0px 0px 68px 0px rgba(0, 0, 0, 0.05);
 }
 
 .switcher {
