--- a/src/index.css
+++ b/src/index.css
@@ -284,3 +284,11 @@ button:focus-visible {
 .oval::after {
   clip-path: ellipse(50% 100% at 50% 100%);
 }
+
+.switch-shadow {
+  box-shadow: -5px -5px 10px 0px rgba(0, 0, 0, 0.10), 5px 5px 10px 0px rgba(0, 0, 0, 0.10);
+}
+
+.thumb-shadow {
+  box-shadow: -5px -5px 10px 0px rgba(0, 0, 0, 0.10), 5px 5px 10px 0px rgba(0, 0, 0, 0.10);
+}
